# HackathonIA

./: README.md
Chat/: main.py  pyproject.toml
Embeddings/: .gitignore  Configuration.cs  Embeddings.csproj  Embeddings.sln.DotSettings  MarkdownReader.cs  Program.cs  Query.cs  appsettings.json
Embeddings/Data/: _index.md  code.md  dataexchange.md  dp.md  flow.md  inseason-parameters.md  inseason-reporting.md  omp.md  resource-center.md  sales-reporting.md  storages.md  tecnologia.md
